# dexto

./: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  setup.py  start.py
docs/: DEPLOYMENT_GAPS_ANALYSIS.md
docs/deployment/: CLI_REFERENCE.md  MODE_COMPARISON.md  QUICK_START.md  WINDOWS_DEPLOYMENT.md
scripts/windows/: ADVANCED_FEATURES.md  QUICK_START.txt  README.md  check_prerequisites.bat  configure.bat  install.bat  start.bat  (+3 more)
voice-automation-hub/: .env.example  .gitignore  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  QUICKSTART.md  README.md  VALIDATION_REPORT.md  setup_project.py
voice-automation-hub/backend/: pyproject.toml  requirements.txt
voice-automation-hub/backend/app/: api_client.py  auth.py  cache.py  collaboration.py  constants.py  database.py  error_handling.py  main.py  memory_store.py  memory_store_enhanced.py  monitoring.py  security.py  server.py  webhooks.py  websocket.py  workflow_templates.py
voice-automation-hub/backend/app/agents/: __init__.py  analysis.py  code.py  creator.py  orchestrator.py  research.py  research_enhanced.py  test.py
voice-automation-hub/backend/app/tools/: __init__.py  browser.py  browser_enhanced.py  cli.py  filesystem.py  git.py  test_runner.py
voice-automation-hub/backend/app/widgets/: __init__.py  mcp_dashboard.py  task_progress.py  workflow_dag.py
voice-automation-hub/backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_api_integration.py  test_memory_store.py  test_p0_features.py  test_performance.py  test_server.py
voice-automation-platform/: IMPLEMENTATION_STATUS.md  README.md
(+26 files in other folders)
